# backery-backend

./: .gitignore  Cargo.toml  README.md
migration/: Cargo.toml  migration_commands.txt
migration/src/: lib.rs  m20240828_000001_create_bakery_table.rs  m20240828_000002_create_chef_table.rs
sql/: queries.sql
src/: bakeries_routes.rs  error_responder.rs  main.rs  setup.rs
src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
