[package]
name = "backery-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.104", features = ["derive"], optional = false }
serde_json = { version = "1.0.118", optional = false }
rocket = { version = "0.5.1", features = ["json"] }
